[package]
name = "data-source"
version = "0.1.0"
edition = "2021"
categories = ["data-structures"]
keywords = ["clash"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "a simple crate that fetches data from different sources"
homepage = "https://github.com/e1732a364fed/data-source"
repository = "https://github.com/e1732a364fed/data-source"

[dependencies]
log = "0.4.25"
tar = { version = "0.4.43", optional = true }
reqwest = { version = "0.12", optional = true, features = ["blocking"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
tempfile = "3.17.1"

[features]
default = ["tar", "reqwest"]
