[package]
name = "data-source"
version = "0.1.4"
edition = "2021"
categories = ["data-structures"]
keywords = ["clash"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "a simple crate that fetches data from different sources"
homepage = "https://github.com/e1732a364fed/data-source"
repository = "https://github.com/e1732a364fed/data-source"

[dependencies]
log = "0.4"
tar = { version = "0.4", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
thiserror = "2"
tokio = { version = "1", optional = true, features = ["full"] }
futures = { version = "0.3", optional = true }
astral-tokio-tar = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = ["reqwest", "tokio-tar"]
tokio = ["futures", "async-trait", "dep:tokio"]
tokio-tar = ["tokio", "tar", "dep:astral-tokio-tar"]

[dev-dependencies]
tempfile = "3.17"
